--- a/Interfaz/Interfaz/Interfaz.csproj
+++ b/Interfaz/Interfaz/Interfaz.csproj
@@ -68,16 +68,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Web.config" />
-    <Content Include="WebForm1.aspx" />
+    <Content Include="Inicio Sesion.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WebForm1.aspx.cs">
-      <DependentUpon>WebForm1.aspx</DependentUpon>
+    <Compile Include="Inicio Sesion.aspx.cs">
+      <DependentUpon>Inicio Sesion.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="WebForm1.aspx.designer.cs">
-      <DependentUpon>WebForm1.aspx</DependentUpon>
+    <Compile Include="Inicio Sesion.aspx.designer.cs">
+      <DependentUpon>Inicio Sesion.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
